wp-content/themes/jeanknowscars/assets/css/mod-list-item-vehicle.css
.mod-list-item-vehicle-wrap h3 {
    font-size: 22px;
    font-weight: normal;
    margin: 30px 0 20px;
}

.mod-list-item-vehicle.first-page {
    border: 1px solid #e1e1e1;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
    margin-left: 4.9232%;
    margin-bottom: 30px;
}

.mod-list-item-vehicle.normal-page {
    margin-bottom: 30px;
    margin-left: 4%;
}

.mod-list-item-vehicle:hover {
    background-color: #fff; /* layer fill content */
    background-image: linear-gradient(90deg, #e2e3e2 0%, #e2e3e2 0.24%, #fefefe 29.49%, #fefefe 100%); /* gradient overlay */
    background-image: -o-linear-gradient(90deg, #e2e3e2 0%, #e2e3e2 0.24%, #fefefe 29.49%, #fefefe 100%); /* gradient overlay */
    background-image: -webkit-linear-gradient(90deg, #e2e3e2 0%, #e2e3e2 0.24%, #fefefe 29.49%, #fefefe 100%); /* gradient overlay */
    background-image: -moz-linear-gradient(90deg, #e2e3e2 0%, #e2e3e2 0.24%, #fefefe 29.49%, #fefefe 100%); /* gradient overlay */
    -moz-box-shadow: 0 0 5px rgba(0,0,0,.35); /* outer glow */
    -webkit-box-shadow: 0 0 5px rgba(0,0,0,.35); /* outer glow */
    box-shadow: 0 0 5px rgba(0,0,0,.35); /* outer glow */
}

.mod-list-item-vehicle.first-col {
    margin-left: 0;
    clear: left;
}

.mod-list-item-vehicle.normal-page.first-col {
    margin-bottom: 0;
}

.mod-list-item-vehicle .img-wrap {
    position: relative;
}

.mod-list-item-vehicle.first-page .img-wrap img {
    display: block;
    border-bottom: 1px solid #e1e1e1;
}

.mod-list-item-vehicle.normal-page .img-wrap img {
    display: block;
    border: 1px solid #e1e1e1;
    width: 100%;
}

.mod-list-item-vehicle .img-hover {
    background: #ffff00;
    background-color: rgb(77, 191, 192);
    background-color: rgba(77, 191, 192, 0.8);
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
    color: #fff;
    display: none;
    font-size: 40px;
    line-height: 100%;
    font-weight: normal;
    height: 100%;
    position: absolute;
    text-align: center;
    text-decoration: none;
    top: 0;
    width: 100%;
    -webkit-transition: none 0.2s ease-out;
    -webkit-transition-property: opacity, filter;
    -moz-transition: none 0.2s ease-out;
    -moz-transition-property: opacity, filter;
    -o-transition: none 0.2s ease-out;
    -o-transition-property: opacity, filter;
    transition: none 0.2s ease-out;
    transition-property: opacity, filter;
}

.mod-list-item-vehicle:hover .img-hover {
    display: block;
}

.mod-list-item-vehicle .img-hover span {
    bottom: 0;
    height: 40px;
    left: 0;
    margin: auto;
    position: absolute;
    right: 0;
    top: 0;
    width: 100%;
}

.mod-list-item-vehicle .info-wrap {
    height: 192px;
    overflow: hidden;
    padding: 0 9px;
}

.mod-list-item-vehicle.normal-page .info-wrap {
    height: auto;
}

.mod-list-item-vehicle .title-wrap {
    line-height: 22px;
    margin: 20px 0 0;
}

.mod-list-item-vehicle .title-wrap a {
    color: #43a4a5;
    font-size: 22px;
    font-weight: normal;
    line-height: 22px;
    text-decoration: none;
}

.mod-list-item-vehicle .tags-wrap {
    margin-top: 7px;
    font-size: 14px;
    line-height: 18px;
}

.mod-list-item-vehicle .tags-wrap span,
.mod-list-item-vehicle .tags-wrap a {
    color: #43a4a5;
    text-decoration: none;
}

.mod-list-item-vehicle .desc {
    color: #666;
    display: block;
    max-height: 72px;
    overflow: hidden;
    margin-top: 5px;
}

.mod-list-item-vehicle .social {
    border-top: 1px solid #e1e1e1;
    margin: 0 9px;
    padding: 5px 0;
    position: relative;
}

.mod-list-item-vehicle.normal-page .social {
    border-top: none;
    margin-top: 20px;
}

.mod-list-item-vehicle .share-btn {
    background: url("/wp-content/themes/jeanknowscars/assets/img/lnk-video-share.png") no-repeat 0 3px;
    color: #000;
    font-size: 12px;
    font-weight: bold;
    padding-left: 20px;
    cursor: pointer;
}

.mod-list-item-vehicle .mod-addthis-hover {
    background-clip: padding-box;
    background-color: #fff;
    border-radius: 2px;
    box-shadow: 0 1px 3px rgba(142, 143, 141, 0.4), 0 0 0 1px rgba(182, 181, 181, 0.5);
    display: none;
    padding: 10px 15px;
    position: absolute;
    left: -15px;
    top: -5px;
    z-index: 99999;
}

.mod-list-item-vehicle .mod-addthis-hover .addthis-share {
    background: url("/wp-content/themes/jeanknowscars/assets/img/lnk-video-share.png") no-repeat 0 3px;
    color: #000;
    font-size: 12px;
    font-weight: bold;
    margin-bottom: 10px;
    padding-left: 20px;
}

.mod-list-item-vehicle .mod-addthis-hover .addthis_toolbox > a {
    clear: both;
    float: left;
    height: 25px;
}

